Switch to Azure API
Use my old Scrabble club site to get data.

--- a/sc/src/App.css
+++ b/sc/src/App.css
@@ -312,3 +312,12 @@
   left: 4px;
   top: 7px;
 }
+.equispaced {
+  font-family: monospace;
+}
+.textright {
+  text-align: right;
+}
+.textcenter {
+  text-align: center;
+}
