Support all club nights view
Tweaked sort stuff to indicate which columns are sortable, and improved on default sort order for the columns. Also tried to make it more obvious that the three winner fields are related to the winner, to try lessen the illusion that the high game was by the winner name.

--- a/sc/src/App.css
+++ b/sc/src/App.css
@@ -96,6 +96,7 @@
 }
 .trTable td {
   font-family: var(--trcssTdFont);
+  padding-left: 3px;
 }
 .trTable tbody tr:hover {
   background-color: cyan;
@@ -167,4 +168,12 @@
 .sortarrow {
   color: yellow;
   margin-left: 1px;
+}
+.sortarrow:hover {
+  cursor: pointer;
+}
+.thwinner {
+  background-color: #0000FF;
+  display: flex;
+  justify-content: space-between;
 }
